Agrege colorApp para manejar los colores

--- a/src/capa_presentacion/admin/ModalCambiarTema.form
+++ b/src/capa_presentacion/admin/ModalCambiarTema.form
@@ -55,12 +55,12 @@
         <Property name="verticalGap" type="int" value="10"/>
       </Layout>
       <SubComponents>
-        <Component class="javax.swing.JButton" name="jButton2">
+        <Component class="javax.swing.JButton" name="btnLigthTheme">
           <Properties>
             <Property name="text" type="java.lang.String" value="Tema Claro"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JButton" name="jButton1">
+        <Component class="javax.swing.JButton" name="btnDarkTheme">
           <Properties>
             <Property name="text" type="java.lang.String" value="Tema Oscuro"/>
           </Properties>
